<resources>
    <string name="app_name">Umeed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_key">IzaSyCFJ2w6D8r0Lcs8olpaf6L5gKWIoErEC_g</string>
    <string name="pmjay_info">It is health insurance scheme that provides medical insurance coverage of ₹5 lakhs to the poor and the vulnerable. Some of the health insurance benefits included in the Ayushman Bharat - Pradhan Mantri Jan Arogya Yojana are as follows \n 1. A hospitalisation cover up to 3 days \n 2. A post-hospitalisation cover of up to 15 days \n 3. A cover for all pre-existing conditions with no waiting period. \n 4. No restrictions on the number of family members under the coverage of the scheme \n 5. Cashless treatment at any government or private hospital in the country under the scheme \n 6. Coverage for 1,393 procedures \n 7. Coverage for the expenses for treatment, drugs, physician\'s fee, diagnostics, ICU charges, etc. \n 8. An annual premium of ₹30 \n <a href="https://www.nhp.gov.in/ayushman-bharat-yojana_pg">Visit website</a></string>
    <string name="aaby_info">People practising one of the 48 vocations listed in the scheme can become beneficiaries after the payment of a premium of ₹200 per annum. This scheme offers both a life cover and an accidental death cover to its members. \n\nThe coverage under the Aam Aadmi Bima Yojana is as follows: \n\n 1. A sum insured of ₹30,000 for the natural death of the beneficiary \n 2. A sum insured of ₹75,000 for the accidental death of the beneficiary. \n 3. Coverage for only the earning member or head of a family \n <a href="https://www.bankbazaar.com/health-insurance/aam-aadmi-bima-yojana.html">Visit Website</a></string>
    <string name="esi_info">Primarily designed to help factory workers handle the expenses following accidents and occupational hazards, the Employees\' State Insurance Scheme is available for the workers employed in various factories in India. The workers drawing wages not in excess of ₹21,000 per month can participate in this scheme. This ceiling is ₹25,000 for persons with disabilities. \n\nThe premium for participation in this health insurance scheme is shared by the employers and the employees. However, workers earning wages lower than ₹137 per day are exempt from the payment of their share of the premium. Here\'s the coverage provided by the Employee State Insurance Scheme (ESIS) \n\n 1. Medical Benefit for the insured and their family \n 2. Sickness Benefit for a maximum of 91 days of sickness per annum \n 3. Extended Sickness Benefit up to 2 years in case of the occurrence of 34 malignant diseases as well as long-term ailments \n 4. Enhanced Sickness Benefit of up to 7 days for male beneficiaries and 14 days for female beneficiaries in case of sterilisation \n 5. Maternity Benefit of 26 weeks, extendable by four weeks \n 6. Disablement Benefit \n 7. Dependents\' Benefit in the event of the death of the insured due to an injury caused by their work or occupational hazard \n <a href="https://www.india.gov.in/spotlight/employees-state-insurance-scheme#tab=tab-1">Visit website</a></string>
    <string name="pmsby_info">With an aim to enhance the penetration of health insurance in India, the Government of India launched the Pradhan Mantri Suraksha Bima Yojana (PMSBY). This scheme offers insurance coverage for accidental death and disability. At an annual premium of ₹12, you can benefit from the following covers: \n\n 1. A sum insured of ₹2,00,000 in case of accidental death or total disability \n 2. A sum insured of ₹1,00,000 for partial disability The premium for the Pradhan Mantri Suraksha Bima Yojana gets automatically debited from the bank accounts of the beneficiaries every year. In order to subscribe to this scheme, you must have an Aadhar card and a Bank Account. \n <a href="https://www.axisbank.com/retail/insurance/pradhan-mantri-suraksha-bima-yojana/features-benefits">Visit website</a></string>
    <string name="cghs_info">The Central Government Health Scheme is a government health insurance scheme launched by the central government to provide medical insurance to their employees. This category of employees includes: \n 1. Employees in the Judiciary \n 2. Employees in the Executive \n 3. Employees in the Legislature \n 4. Employees in the Press Department \n\n The Central Government Health Scheme is available for the employees and pensioners from several central government departments, specifically listed in the scheme. Under this scheme, the eligible central government employees can have, amongst others, the following health insurance benefits. \n 1. Cover for PPF Treatment and the issuance of medicines \n 2. Cover for consultation with specialists at government hospitals \n 3. Indoor treatment at government hospitals and empanelled hospitals \n 4. Cover for family welfare services \n 5. Cover for Maternity expenses \n 6. Cover for AYUSH Treatment (Ayurveda, Yoga and Naturopathy, Unani, Siddha, and Homeopathy) \n <a href="https://www.bajajfinservmarkets.in/insurance/health-insurance/pradhan-mantri-jan-arogya-yojana-pmjay/central-government-health-scheme-cghs.html">Visit website</a></string>
    <string name="mjpjay_info">The Mahatma Jyotiba Phule Jan Arogya Yojana has been launched by the government of Maharashtra to provide health insurance to people living below the poverty line. This scheme provides cashless insurance benefits to the families holding a yellow, orange, or red ration card, Annapurna ration card, Antyodaya Anna Yojana ration card, the children living in government orphanages, the residents of governmental Mahila Ashrams and Senior Citizen Homes, etc. \n\n The health insurance coverage provided by the Mahatma Jyotiba Phule Jan Arogya Yojana is as follows: \n 1. A sum insured of ₹1,50,000 for the hospitalisation of the beneficiary and their family members \n 2. A sum insured of ₹2,50,000 (including the sum insured mentioned above) for renal transplants \n 3. Coverage of the entire family of the beneficiary under the ambit of the plan \n <a href="https://www.policybazaar.com/health-insurance/govt-scheme/mahatma-jyotirao-phule-jan-arogya/">Visit website</a></string>
    <string name="bsby_info">The Bhamashah Swasthya Bima Yojana is a medical insurance plan specifically for the residents of the rural areas of the state of Rajasthan. In addition to the aforementioned category of people, the beneficiaries under the Rashtriya Swasthya Bima Yojana and the National Food Security Act can also be beneficiaries under the Bhamashah Yojana. \nHere is the coverage available under the Bhamashah Swasthya Bima Yojana. \n 1. A health insurance cover of ₹30,000 for general ailments \n 2. A health insurance cover of ₹3,00,000 for critical illnesses \n 3. Cashless treatment with a cover for all hospitalisation expenses \n 4. Pre-hospitalisation expenses for up to 7 days before hospitalisation \n 5. Post-hospitalisation expenses for up to 15 days following discharge from the hospital \n 6. Cover for OPD treatments<a href="https://www.coverfox.com/health-insurance/bhamashah-swasthya-bima-yojana/">Visit website</a></string>
    <string name="rsby_info">The Rashtriya Swasthya Bima Yojana (RSBY) is a health insurance policy launched specifically for the people working in the unorganised sectors of India. Almost 93 per cent of the country\'s total workforce is constituted by the unorganised sector. \n Here is the coverage available to the beneficiaries of the Rashtriya Swasthya Bima Yojana. \n 1. A sum insured of ₹30,000 for a worker in the unorganised sector and their family \n 2. Cover for hospitalisation expenses \n 3. Cover for all pre-existing diseases \n 4. Cover for transportation expenses up to ₹1,000 \n 5. Cashless Insurance \n 6. A premium of ₹30 per annum \n <a href="https://www.india.gov.in/spotlight/rashtriya-swasthya-bima-yojana">Visit website</a></string>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your City</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your City</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your City</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
</resources>