<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Policies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:onClick="expand1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Ayushman Bharat - Pradhan Mantri Jan Arogya Yojana (PM-JAY)"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/pmjay"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pmjay_info"
                    android:textSize="16dp"
                    android:visibility="gone"
                    android:linksClickable="true"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Aam Aadmi Bima Yojana (AABY)"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/aaby"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaby_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Employees' State Insurance Scheme (ESI)"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/esi"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esi_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Pradhan Mantri Suraksha Bima Yojana (PMSBY)"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/pmsby"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pmsby_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Central Government Health Scheme"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/cghs"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cghs_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Mahatma Jyotiba Phule Jan Arogya Yojana"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/mjpjay"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mjpjay_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Bhamashah Swasthya Bima Yojana"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/tbsby"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bsby_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="expand8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The Rashtriya Swasthya Bima Yojana (RSBY)"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/rsby"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/policyInfo8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rsby_info"
                    android:textSize="16dp"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>